--- a/WCP/fdahpStudyDesigner/src/main/resources/application.properties
+++ b/WCP/fdahpStudyDesigner/src/main/resources/application.properties
@@ -85,6 +85,6 @@ cloud.bucket.name=study-resources
 
 study.defaultImage=Overview_1.jpg
 study.page2.defaultImage=STUDY_DEFAULTIMAGE2.jpg
-
+study.basicInformation.defaultImage=STUDY_BI_GATEWAY.jpg
 ########################## Web Configuration Portal Web-Services (WCP WS) Configuration Details ENDS ##########################
 
