--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 participant-datastore/consent-mgmt/ConsentMgmtServicesWs.iml
 participant-manager/coverage/
 participant-manager/node_modules/
+xcuserdata
