--- a/Android/api.properties
+++ b/Android/api.properties
@@ -3,45 +3,37 @@
 # see: study-datastore/src/main/resources/authorizationResource.properties
 # In terraform deployment these values are found in `auto-sd-android-id` and
 # `auto-sd-android-token` secrets in your GCP secrets project.
-API_KEY=""
-
+API_KEY="2935meVjvRqvGocz:PDr4C2yUw1J4Q7oH"
 # URL of study datastore server.
 # e.g. https://studies.mystudiesdeployment.com/study-datastore
-BASE_URL_STUDY_DATASTORE=""
-
+BASE_URL_STUDY_DATASTORE="https://studies.kyoto-demo.clipcrow.com/study-datastore"
 # URL of different service bundles within participant datastore.
 # e.g. https://participants.mystudiesdeployment.com/participant-user-datastore
-BASE_URL_PARTICIPANT_DATASTORE=""
+BASE_URL_PARTICIPANT_DATASTORE="https://participants.kyoto-demo.clipcrow.com/participant-user-datastore"
 # e.g. https://participants.mystudiesdeployment.com/participant-consent-datastore
-BASE_URL_PARTICIPANT_CONSENT_DATASTORE=""
+BASE_URL_PARTICIPANT_CONSENT_DATASTORE="https://participants.kyoto-demo.clipcrow.com/participant-consent-datastore"
 # e.g. https://participants.mystudiesdeployment.com/participant-enroll-datastore
-BASE_URL_PARTICIPANT_ENROLLMENT_DATASTORE=""
-
+BASE_URL_PARTICIPANT_ENROLLMENT_DATASTORE="https://participants.kyoto-demo.clipcrow.com/participant-enroll-datastore"
 # URL of Hydra Server.
 # e.g. https://participants.mystudiesdeployment.com
-BASE_URL_HYDRA_SERVER=""
-
+BASE_URL_HYDRA_SERVER="https://participants.kyoto-demo.clipcrow.com"
 # URL of oauth scim service.
 # e.g. https://participants.mystudiesdeployment.com/auth-server
-BASE_URL_AUTH_SERVER=""
-
+BASE_URL_AUTH_SERVER="https://participants.kyoto-demo.clipcrow.com/auth-server"
 # URL of response datastore.
 # e.g. https://participants.mystudiesdeployment.com/response-datastore
-BASE_URL_RESPONSE_DATASTORE=""
-
+BASE_URL_RESPONSE_DATASTORE="https://participants.kyoto-demo.clipcrow.com/response-datastore"
 # Hydra ClientId for auth-server of the application.
 # In terraform deployment this value should come from the value of
 # `auto-auth-server-client-id` secret in your GCP secrets project.
-HYDRA_CLIENT_ID=""
-
+HYDRA_CLIENT_ID="QFMrv678quwk7Maf"
 # AppID of this android application.
 # Study builder would use this appID to match studies to apps.
 #
 # Should be max 15 character, human readable and URL safe.
 # If following terraform deployment steps, APP_ID should match the one you
 # manually set in GCP secret manager, i.e. `manual-mobile-app-appid`.
-APP_ID=""
-
+APP_ID="KYOTO_DEMO"
 # Set to either 'standalone' or 'gateway'
 # standalone app navigates directly to a single study
 # while gateway variation allows for multiple studies to
